UI: fix vertical-align of th elements

--- a/ui/src/css/tailwind.src.css
+++ b/ui/src/css/tailwind.src.css
@@ -67,6 +67,7 @@ table.spaced {
 
 th {
   text-align: left;
+  vertical-align: baseline;
 }
 
 /* TableResponsive */
